--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corazones Flotantes</title>
+    <title>Para la Enfermera de mi Corazón ❤️‍🩹</title>
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <style>
         * {
